--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -10,4 +10,14 @@ spring:
         git:
           uri: https://github.com/upendrasingh111988/microservicesConfigurations
           clone-on-start: true
+          
+eureka:
+  instance:
+    prefer-ip-address: true
+    
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
