--- a/ConfigServer/src/main/resources/application-prod.yml
+++ b/ConfigServer/src/main/resources/application-prod.yml
@@ -1,13 +1,12 @@
-server:
-  port: 8085
-
-spring:
-  application:
-    name: ConfigServer
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/upendrasingh111988/microservicesConfigurations
-          clone-on-start: true
+application:
+  name: config-server-prod
+eureka:
+  instance:
+    prefer-ip-address: true
+    
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
